--- a/tugas/pelatihan-vcs-2023/urvan_gibran/styles.css
+++ b/tugas/pelatihan-vcs-2023/urvan_gibran/styles.css
@@ -218,8 +218,8 @@ nav {
   justify-content: space-between;
   align-items: center;
   color: white;
-  margin: 10px 20px;
-  padding: 16px;
+  margin: 0.625rem 1.25rem;
+  padding: 1rem;
   box-sizing: border-box;
 }
 
@@ -234,7 +234,6 @@ nav p::after {
   height: 2px;
   border-radius: 30%;
   width: 0;
-  left: 0;
   bottom: -10px;
   transition: 0.3s;
 }
@@ -246,12 +245,13 @@ nav p:hover::after {
 /* End Edit General Navbar */
 /* Start Element di dalam navbar */
 .left-nav {
-  margin-left: 30px;
+  margin-left: 1.875rem;
   display: flex;
-  gap: 23px;
+  gap: 1.4375rem;
 }
 
 .left-nav p::after {
+  left: 0;
   background-color: var(--brown-light);
 }
 
@@ -261,8 +261,8 @@ nav p:hover::after {
 
 .center-nav h3 {
   font-weight: 300;
-  font-size: 40px;
-  text-shadow: 0.5008px 1px rgb(67, 57, 57);
+  font-size: 2.5rem;
+  text-shadow: .5px 1px rgb(67, 57, 57);
   cursor: pointer;
   transition: color 0.5s ease;
 }
@@ -278,7 +278,7 @@ nav p:hover::after {
 .right-nav {
   display: flex;
   align-items: center;
-  gap: 23px;
+  gap: 1.4375rem;
 }
 
 .right-nav span {
@@ -286,11 +286,12 @@ nav p:hover::after {
 }
 
 .right-nav p::after {
+  right: 0;
   background-color: var(--green-light);
 }
 
 .pic-nav {
-  width: 34px;
+  width: 2.125rem;
   border-radius: 50%;
   cursor: pointer;
 }
@@ -306,8 +307,142 @@ nav p:hover::after {
 }
 
 .pic-nav.cart {
-  width: 37px;
+  width: 2.3125rem;
 }
 
 /* End Element di dalam navbar */
 /* --------------------------------------------- End Header Style --------------------------------------------- */
+/* --------------------------------------------- Start Hero Comp --------------------------------------------- */
+
+main {
+  display: grid;
+  position: relative;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.left-main {
+  margin: 0px 30px;
+  position: relative;
+  display: grid;
+  height: 85vh;
+  grid-template-rows: auto auto auto;
+  align-content: space-between;
+}
+
+.left-top--main {
+  height: 6.25rem;
+  margin-left: -3.125rem;
+  margin-top: -1.875rem;
+}
+
+.left-top--main img {
+  width: 9.375rem;
+  cursor: pointer;
+  background-image: none;
+}
+
+.left-middle--main {
+  color: white;
+}
+
+.left-middle--main h1 {
+  font-weight: 300;
+  font-size: 4rem;
+  margin-bottom: 2.325rem;
+}
+
+.left-middle--main p {
+  font-size: 16px;
+  margin-bottom: 2.325rem;
+  letter-spacing: 0.0625rem;
+  line-height: 1.75rem;
+}
+
+.left-middle--main .btn {
+  background-color: var(--purple);
+  display: flex;
+  border-radius: 5px;
+  width: 11.875rem;
+  height: 4.6875rem;
+  box-sizing: border-box;
+  padding: 0.9375rem;
+  z-index: 100;
+  cursor: pointer;
+}
+
+.left-middle--main .btn h3 {
+  color: black;
+  z-index: 100;
+  letter-spacing: 0.125rem;
+  text-align: center;
+  margin: auto;
+}
+
+.button-wrapper {
+  position: relative;
+}
+
+.button-hover {
+  position: relative;
+  width: 11.875rem;
+  height: 4.6875rem;
+}
+
+.left-middle--main .btn:hover h3 {
+  box-shadow: #9D7E5F;
+}
+
+.btn::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 0%;
+  background-color: white;
+  z-index: -1;
+  transition: 0.5s;
+  top: 0;
+  border-radius: 0 0 35% 35%;
+}
+
+.btn:hover::before {
+  height: 100%;
+  z-index: 99;
+  color: var(--brown);
+}
+
+.left-middle--main .btn-shadow {
+  position: absolute;
+  top: 0.375rem;
+  left: 0.375rem;
+  z-index: -999;
+  background-color: transparent;
+  border: 1px solid white;
+}
+
+.left-bottom--main {
+  align-items: center;
+  gap: 1.375rem;
+  display: flex;
+  margin: 1.875rem 0;
+}
+
+.left-bottom--main .image {
+  cursor: pointer;
+  padding: 0.3125rem;
+}
+
+.left-bottom--main .image:hover {
+  background-color: #282828;
+  border-radius: 100%;
+  transform: scale(0.9);
+}
+
+.left-bottom--main img {
+  width: 1.875rem;
+}
+
+.left-bottom--main .locate {
+  color: #F6F1E5;
+  line-height: 1.5rem;
+}
