feat: add center main 'image'

--- a/tugas/pelatihan-vcs-2023/urvan_gibran/styles.css
+++ b/tugas/pelatihan-vcs-2023/urvan_gibran/styles.css
@@ -446,3 +446,10 @@ main {
   color: #F6F1E5;
   line-height: 1.5rem;
 }
+
+.center-main img {
+  left: 50%;
+  transform: translate(-50%, 0);
+  width: 32%;
+  position: absolute;
+}
