feat: add right main

--- a/tugas/pelatihan-vcs-2023/urvan_gibran/styles.css
+++ b/tugas/pelatihan-vcs-2023/urvan_gibran/styles.css
@@ -435,6 +435,9 @@ main {
 .left-bottom--main .image:hover {
   background-color: #282828;
   border-radius: 100%;
+}
+
+.left-bottom--main .image:active {
   transform: scale(0.9);
 }
 
@@ -452,4 +455,228 @@ main {
   transform: translate(-50%, 0);
   width: 32%;
   position: absolute;
+}
+
+.right-main {
+  margin: 0px 30px;
+  position: relative;
+  display: grid;
+  height: 85vh;
+  justify-content: end;
+  align-content: space-between;
+  grid-template-rows: auto auto auto;
+}
+
+.right-top--main {
+  margin-top: 0.9375rem;
+  margin-right: 3.125rem;
+  color: white;
+  text-align: end;
+}
+
+.right-middle--main .counter-icon {
+  color: white;
+  width: 320px;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.btn-counter {
+  display: block;
+  height: 50px;
+  width: 50px;
+  border: 2px solid white;
+  border-radius: 50%;
+  margin: 30px 15px;
+  transition: 0.4s ease;
+  cursor: pointer;
+}
+
+.btn-counter:hover {
+  border: 2px solid var(--purple);
+  background-color: var(--purple);
+}
+
+.btn-counter:hover div {
+  border-top: 2px solid black;
+  border-left: 2px solid black;
+}
+
+.btn-counter div {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  border-top: 2px solid white;
+  border-left: 2px solid white;
+  transform: rotate(45deg);
+  left: 19px;
+  top: 21px;
+}
+
+.btn-counter--prev {
+  transform: rotate(-90deg);
+}
+
+.btn-counter--next {
+  transform: rotate(90deg);
+}
+
+.right-middle--main .counter h1 {
+  font-size: 60px;
+  font-weight: 400;
+  text-align: center;
+}
+
+.right-middle--main .counter p {
+  letter-spacing: 3px;
+  font-size: 26px;
+  position: absolute;
+  left: 236px;
+  top: 58px;
+}
+
+.slider {
+  width: 320px;
+  height: 500px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.slides {
+  width: 500%;
+  height: 500px;
+  display: flex;
+}
+
+.slides input {
+  display: none;
+}
+
+.slide {
+  width: 20%;
+  transition: 2s;
+}
+
+.slide img {
+  width: 320px;
+  height: 500px;
+}
+
+.navigation-manual {
+  position: absolute;
+  width: 320px;
+  margin-top: -40px;
+  display: flex;
+  justify-content: center;
+}
+
+.manual-btn {
+  border: 2px solid #F6F1E5;
+  padding: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.manual-btn:not(:last-child) {
+  margin-right: 40px;
+}
+
+.manual-btn:hover {
+  background-color: var(--green-light);
+}
+
+#radio1:checked~.first-slide {
+  margin-left: 0;
+}
+
+#radio2:checked~.first-slide {
+  margin-left: -20%;
+}
+
+#radio3:checked~.first-slide {
+  margin-left: -40%;
+}
+
+#radio4:checked~.first-slide {
+  margin-left: -60%;
+}
+
+#radio5:checked~.first-slide {
+  margin-left: -80%;
+}
+
+.navigation-auto {
+  position: absolute;
+  display: flex;
+  width: 320px;
+  justify-content: center;
+  margin-top: 460px;
+}
+
+.navigation-auto div {
+  border: 2px solid var(--green-light);
+  padding: 5px;
+  border-radius: 10px;
+  transition: 1s;
+}
+
+.navigation-auto div:not(:last-child) {
+  margin-right: 40px;
+}
+
+#radio1:checked~.navigation-auto .auto-btn-1 {
+  background: var(--green-light);
+}
+
+#radio2:checked~.navigation-auto .auto-btn-2 {
+  background: var(--green-light);
+}
+
+#radio3:checked~.navigation-auto .auto-btn-3 {
+  background: var(--green-light);
+}
+
+#radio4:checked~.navigation-auto .auto-btn-4 {
+  background: var(--green-light);
+}
+
+#radio5:checked~.navigation-auto .auto-btn-5 {
+  background: var(--green-light);
+}
+
+.right-bottom--main {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  margin-left: -3.4rem;
+  gap: 1.25rem;
+  color: var(--brown);
+  margin-top: 1.25rem;
+}
+
+.right-bottom--main p {
+  color: white;
+}
+
+.icon-sosmed {
+  background-color: #F6F1E5;
+  width: 1.875rem;
+  height: 1.875rem;
+  border-radius: 100%;
+  display: flex;
+  padding: 0.125rem;
+}
+
+.right-bottom--main a:hover .icon-sosmed {
+  background-color: #dccdab;
+}
+
+.right-bottom--main a:active .icon-sosmed {
+  transform: scale(0.9);
+}
+
+.right-bottom--main .icon-sosmed i {
+  margin: auto;
 }
