--- a/tugas/pelatihan-vcs-2023/Ranto_Bastara_Hamonangan_Sitorus/styles.css
+++ b/tugas/pelatihan-vcs-2023/Ranto_Bastara_Hamonangan_Sitorus/styles.css
@@ -13,7 +13,7 @@ body {
 header {
   position: sticky;
   display: flex;
-  padding: 0px 64px;
+  padding: 16px 100px;
   top: 0;
   align-items: center;
   justify-content: space-between;
@@ -30,10 +30,78 @@ nav > a {
 }
 
 nav > a:hover {
-  color: rgb(172, 104, 55);
+  color: #ed1b24;
 }
 
 h1 {
   font-weight: 700;
   font-size: 45px;
+  margin: 0 0 16px 0;
+}
+
+#Judul {
+  color: #ed1b24;
+}
+
+section {
+  padding: 64px 128px;
+}
+
+.slider-wrapper {
+  position: relative;
+  max-width: 48rem;
+  margin: 0 auto;
+}
+
+.slider {
+  display: flex;
+  aspect-ratio: 16/9;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
+}
+
+.slider img {
+  flex: 1 0 100%;
+  scroll-snap-align: start;
+  object-fit: cover;
+}
+
+.slider-nav {
+  display: flex;
+  column-gap: 1rem;
+  position: absolute;
+  bottom: 1.25rem;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+}
+
+.slider-nav a {
+  width: 0.5rem;
+  height: 0.5rem;
+  border-radius: 50%;
+  background-color: #fff;
+  opacity: 0.75;
+  transition: opacity ease 250ms;
+}
+
+.slider-nav a:hover {
+  opacity: 1;
+}
+
+#landing {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  column-gap: 16px;
+}
+
+#landing h2 {
+  font-size: 64px;
+}
+
+#landing p {
+  font-size: 32px;
 }
