--- a/tugas/pelatihan-vcs-2023/haikal_athallarik/styles.css
+++ b/tugas/pelatihan-vcs-2023/haikal_athallarik/styles.css
@@ -2,32 +2,35 @@
   box-sizing: border-box;
 }
 
-/* Style the body */
 body {
+
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
+  text-align: center;
 }
 
-/* Header/logo Title */
+button {
+  font-size: 35px;
+  margin-bottom: 50px;
+}
+
 .header {
   padding: 80px;
   text-align: center;
-  background: #1abc9c;
+  background: hsl(258, 60%, 51%);
   color: white;
+  margin-bottom: 50px;
 }
 
-/* Increase the font size of the heading */
 .header h1 {
-  font-size: 40px;
+  font-size: 50px;
 }
 
-/* Style the top navigation bar */
 .navbar {
   overflow: hidden;
   background-color: #333;
 }
 
-/* Style the navigation bar links */
 .navbar a {
   float: left;
   display: block;
@@ -37,67 +40,15 @@ body {
   text-decoration: none;
 }
 
-/* Right-aligned link */
 .navbar a.right {
   float: right;
 }
 
-/* Change color on hover */
+
 .navbar a:hover {
-  background-color: #ddd;
-  color: black;
+  background-color: #8a25a8;
+  color: #000000;
 }
 
-/* Column container */
-.row {  
-  display: -ms-flexbox; /* IE10 */
-  display: flex;
-  -ms-flex-wrap: wrap; /* IE10 */
-  flex-wrap: wrap;
-}
 
-/* Create two unequal columns that sits next to each other */
-/* Sidebar/left column */
-.side {
-  -ms-flex: 30%; /* IE10 */
-  flex: 30%;
-  background-color: #f1f1f1;
-  padding: 20px;
-}
 
-/* Main column */
-.main {   
-  -ms-flex: 70%; /* IE10 */
-  flex: 70%;
-  background-color: white;
-  padding: 20px;
-}
-
-/* Fake image, just for this example */
-.fakeimg {
-  background-color: #aaa;
-  width: 100%;
-  padding: 20px;
-}
-
-/* Footer */
-.footer {
-  padding: 20px;
-  text-align: center;
-  background: #ddd;
-}
-
-/* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 700px) {
-  .row {   
-    flex-direction: column;
-  }
-}
-
-/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-@media screen and (max-width: 400px) {
-  .navbar a {
-    float: none;
-    width: 100%;
-  }
-}
