--- a/tugas/pelatihan-vcs-2023/Ranto_Bastara_Hamonangan_Sitorus/styles.css
+++ b/tugas/pelatihan-vcs-2023/Ranto_Bastara_Hamonangan_Sitorus/styles.css
@@ -22,6 +22,10 @@ header {
   box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.1);
 }
 
+header img {
+  size: 50%;
+}
+
 nav > a {
   font-size: 20px;
   color: black;
