--- a/tugas/pelatihan_vcs_2023/Fernando/landing-page/styles.css
+++ b/tugas/pelatihan_vcs_2023/Fernando/landing-page/styles.css
@@ -1,16 +1,16 @@
 .background-radial-gradient {
-    background-color: hsl(218, 41%, 15%);
+    background-color: hsl(18, 41%, 15%);
     background-image: radial-gradient(650px circle at 0% 0%,
-        hsl(218, 41%, 35%) 15%,
-        hsl(218, 41%, 30%) 35%,
-        hsl(218, 41%, 20%) 75%,
-        hsl(218, 41%, 19%) 80%,
+        hsl(18, 41%, 35%) 15%,
+        hsl(18, 41%, 30%) 35%,
+        hsl(18, 41%, 20%) 75%,
+        hsl(18, 41%, 19%) 80%,
         transparent 100%),
       radial-gradient(1250px circle at 100% 100%,
-        hsl(218, 41%, 45%) 15%,
-        hsl(218, 41%, 30%) 35%,
-        hsl(218, 41%, 20%) 75%,
-        hsl(218, 41%, 19%) 80%,
+        hsl(18, 41%, 45%) 15%,
+        hsl(18, 41%, 30%) 35%,
+        hsl(18, 41%, 20%) 75%,
+        hsl(18, 41%, 19%) 80%,
         transparent 100%);
   }
 
@@ -19,7 +19,7 @@
     width: 220px;
     top: -60px;
     left: -130px;
-    background: radial-gradient(#44006b, #ad1fff);
+    background: radial-gradient(hsl(18, 100%, 21%), hsl(18, 100%, 56%));
     overflow: hidden;
   }
 
@@ -29,6 +29,6 @@
     right: -110px;
     width: 300px;
     height: 300px;
-    background: radial-gradient(#44006b, #ad1fff);
+    background: radial-gradient(hsl(18, 100%, 21%), hsl(18, 100%, 56%));
     overflow: hidden;
   }
